src/Components/Recipes.css
/* ... */
.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleLeft
  .buttonContainer
  button:hover {
  background-color: rgb(253, 231, 215);
  box-shadow: 0 0 7px #ec795c;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleLeft .recipeSection {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 10px 0;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
  /* margin: 5px 0px; */
  border-bottom: 2px solid #ec795c;
  border-bottom-left-radius: 10px;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleLeft .recipeSection:hover {
  box-shadow: 0px -2px 5px #ec795c inset;
  margin: 5px 0px;
}

.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleLeft
  .recipeSection
  .recipe1 {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleLeft
  .recipeSection
  .recipe1
  .recipeImage {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 50px;
  height: 50px;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleLeft .recipeSection img {
  object-fit: cover;
  display: block;
  width: 50px;
  height: 50px;
  border-radius: 50px;
}

.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleLeft
  .recipeSection
  .recipeInner
  #personName {
  font-size: 14px;
  color: #565656;
}

.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleLeft
  .recipeSection
  .recipeInner {
  letter-spacing: 0.5px;
  width: 260px;
  /* border: 2px solid red; */
}

.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleLeft
  .recipeSection
  .userSection {
  border: 2px solid #ec795c;
  width: 25px;
  border-radius: 50%;
  padding: 5px;
  text-align: center;
  color: #333;
}

/* **************************************************** Middle Right  Container below the recipe heading Container ************************* */
.recipeContainer .recipeMiddleContainer .recipeMiddleRight {
  /* border: 2px solid blue; */
  width: 65%;
}

/* ************************************************* Section 1 of Middle Right Container ****************************************** */
.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-1 {
  height: 300px;
  /* border: 2px solid red; */
  overflow: hidden;
  border-radius: 20px;
}

.sec-1 img {
  width: 100%;
  height: 100%;
}

/* ************************************************ Section 2 of Middle Right Container ******************************************** */
.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-size: 1.25vw;
  padding: 30px 40px;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-2 .secInner,
.clockContainer,
.userContainer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 10px;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-2 .secInner {
  gap: 40px;
}

.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleRight
  .sec-2
  .secInner
  .clock,
.user,
.heart,
.plus,
.minus {
  color: #ec795c;
}

.plus,
.minus {
  cursor: pointer;
}

.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleRight
  .sec-2
  .secOuter
  .likeContainer
  button {
  cursor: pointer;
  background: transparent;
  font-size: 22px;
  border: none;
}

/* *************************************************** Section 3 of Middle Right Container ****************************************** */
.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-3 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-3 h2 {
  padding-bottom: 30px;
  font-weight: 400;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-3 .check {
  color: #ec795c;
  font-size: 24px;
  padding: 0;
  padding-right: 17px;
}

.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleRight
  .sec-3
  .listContainer {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 2.5rem 3rem;
  list-style: none;
  padding-top: 10px;
  padding-bottom: 30px;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-3 ul li {
  display: flex;
  align-items: center;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-3 .addToCart {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  padding: 10px;
  font-size: 20px;
  border-radius: 40px;
  margin: 20px 0;
  cursor: pointer;
  background-color: rgb(248, 237, 229);
  border: none;
  border: 2px solid #ec795c;
  margin: 20px 0;
  transition: all 0.3s ease-in-out;
}

.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleRight
  .sec-3
  .addToCart:hover {
  background-color: rgb(253, 231, 215);
  box-shadow: 0 0 7px #ec795c;
}

/* ********************************************* Section 4 of Middle Right Container *********************************************** */
.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-4 {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-4 p {
  font-size: 1.3vw;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-4 p strong {
  color: #ec795c;
  position: relative;
}

.recipeContainer
  .recipeMiddleContainer
  .recipeMiddleRight
  .sec-4
  p
  strong::after {
  content: "";
  height: 2px;
  width: 100%;
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: #ec795c;
  border-radius: 40px;
}

.recipeContainer .recipeMiddleContainer .recipeMiddleRight .sec-4 button {
  background-color: transparent;
  border: none;
  font-size: 1.5vw;
  color: #ec795c;
  margin: 20px 0;
  outline: none;
  cursor: pointer;
  position: relative;
}
/* ... */

